# boost-statechart-viewer

./: .gitignore  CMakeLists.txt
examples/: Makefile
src/: Makefile  visualizer.cpp
unreal/: statechart_extraction.win64.bat  statechart_extraction.wsl2.bat
